--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <h1>St. John's</h1>
     <img
-      src="./images/duckworth-street.jpg"
+      src="/images/duckworth-street.jpg"
       alt="Jellybean houses on Duckworth Street in downtown St.John's, Newfoundland and Labrador."
     />
     <h2>City Information</h2>
